--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 
     <div class="welcome-bottom-margin">
       <%= button_to "Log in", new_login_path, method: :get, class: 'button main-button' %> 
-      <%= button_to "Sign up", new_user_path, method: :get, class: 'button main-button left-margin' %><br/>
+      <%= button_to "Sign up", new_user_path, method: :get, class: 'button main-button right-button-left-margin' %><br/>
     </div>
 
 </div>
