--- a/app/views/story_books/show.html.erb
+++ b/app/views/story_books/show.html.erb
@@ -1,17 +1,15 @@
-<br><br>
-
-<div id="story">
+<div class="story-page">
   <%= image_tag("arrow.png", :width=>40, :height=>30, :onclick => "location.href='/story_books'", :class => "functional-button", :alt => "Go back", :style => "background-color: #c0c4c7; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;")%>
   <%= image_tag("print.png", :width=>40, :height=>30, :onclick => 'window.print();return false;', :class => "functional-button", :alt => "Print", :style => "background-color: #c0c4c7; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;") %>
   <%= image_tag("facebook.png", :width=>40, :height=>30, :onclick => "location.href='https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fparse.com'", :class => "functional-button", :alt => "Share on Facebook", :style => "background-color: #c0c4c7; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;") %>
   <%= image_tag("twitter.svg", :width=>40, :height=>30, :onclick => "location.href='https://twitter.com/share?ref_src=twsrc%5Etfw'", :class => "functional-button", :alt => "Share on Twitter", :style => "background-color: #c0c4c7; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;") %>
 
-    <h1><%= @story_book.tag.titleize %></h1>
-
-    <% @story_book.ready_story.each do |p|%>
-      <p><%=p%> </p>
-       <% end %>
-    <br>
+    <h3 class="pink"><%= @story_book.tag.titleize %></h3>
+    <div class="story">
+      <% @story_book.ready_story.each do |p|%>
+        <p><%=p%> </p>
+      <% end %>
+    </div>
 
   <%= image_tag("arrow.png", :width=>40, :height=>30, :onclick => "location.href='/story_books'", :class => "functional-button", :alt => "Go back", form: {style: 'display:inline-block;'}, :style => "background-color: #c0c4c7; padding: 7px 12px; text-align: center; border-radius: 20px; margin: 2px 2px 2px 2px;")%>
 
