--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -305,10 +305,28 @@ select:-webkit-autofill:focus {
 }
 
 /* story page */
-.story{
-  padding: 5%;
+.story-header>h3{
+  margin-bottom: 3%;
 }
 
+.story{
+  padding: 0% 10% 1% 2%;
+}
+
+.story>p{
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.story-header{
+  display: block;
+}
+
+.story-page-button{
+  width: 30px;
+  margin-left: 1%;
+}
 
 
 /* 
